--- a/rmblibrary/src/main/AndroidManifest.xml
+++ b/rmblibrary/src/main/AndroidManifest.xml
@@ -1,2 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bateman.rich.rmblibrary" />
+    package="com.bateman.rich.rmblibrary" >
+
+    <application
+        android:theme="@style/AppTheme"></application>
+
+</manifest>
+
